--- a/styles.css
+++ b/styles.css
@@ -222,8 +222,11 @@ footer {
     display: flex;
     flex-direction: column;
   }
+ .navbar ul li {
+    padding: 1rem 0;
+  }
   .navbar ul li a {
-    padding: 0.8rem 0.2rem;
+    padding: 0.8rem 0.8rem;
     color: #f3f3f3;
   }
 
