--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 
 body {
   font-family: Roboto;
+  background-color: #e8ecf2;
 }
 
 .navbar {
@@ -207,96 +208,90 @@ body {
 
 /* About Page*/
 
-  /* About Section*/
+/* About Section*/
 
-  .about-container{
-    display: flex;
-    padding: 1rem;
-    background-color: #e8ecf2
-  }
+.about-container {
+  display: flex;
+  padding: 3rem 0;
+}
 
-  .about-container > div{
-    padding: 1rem;
-  }
+.about-container > div {
+  padding: 1rem;
+}
 
-  .about-container .box-1{
-   flex: 2;
-   text-align: left;
-  }
+.about-container .box-1 {
+  flex: 2;
+  text-align: left;
+}
 
-  .about-container .box-1 h1{
-    padding-bottom: 1rem;
-    font-size: 2rem;
-    font-weight: 900;
-    text-shadow: 0px 1px, 1px 0px, 1px 1px;
-  }
+.about-container .box-1 h1 {
+  padding-bottom: 1rem;
+  font-size: 2rem;
+  font-weight: 900;
+  text-shadow: 0px 1px, 1px 0px, 1px 1px;
+}
 
-  .about-container .box-1 p{
-    line-height: 2rem;
-    color: #3d3c3f;
-  }
+.about-container .box-1 p {
+  line-height: 2rem;
+  color: #3d3c3f;
+}
 
-  .about-container .box-2{
-    background: url('https://images.pexels.com/photos/347151/pexels-photo-347151.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
-    background-position: center;
-    border-radius: 3%;
-    background-size: cover;
-    flex:1;
-    align-items: center;
-   
-    
-  }
+.about-container .box-2 {
+  background: url("https://images.pexels.com/photos/347151/pexels-photo-347151.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+  background-position: center;
+  border-radius: 3%;
+  background-size: cover;
+  flex: 1;
+  align-items: center;
+}
 
- /* Guest */
+/* Guest */
 
- .guest{
-   background:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('https://images.pexels.com/photos/258154/pexels-photo-258154.jpeg?auto=compress&cs=tinysrgb&h=650&w=940');
-   background-size: cover;
-   background-position: center;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   
- }
+.guest {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url("https://images.pexels.com/photos/258154/pexels-photo-258154.jpeg?auto=compress&cs=tinysrgb&h=650&w=940");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
- .guest .guest-container{
-   display: flex;
-   flex-direction: column;
-   width: 80%;
-   
- }
+.guest .guest-container {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin: 4rem;
+}
 
- .guest .guest-container > div{
-   display: flex;
-   line-height: 2rem;
-   padding: 1rem;
-   background-color: #f7b67f;
-   margin: 2rem;
-   border-radius: 1%;
-   
- }
+.guest .guest-container > div {
+  display: flex;
+  line-height: 2rem;
+  padding: 1rem;
+  background-color: #f7b67f;
+  margin: 2rem;
+  border-radius: 1%;
+}
 
+.guest h1 {
+  text-align: center;
+  color: #f3f3f3;
+  margin-top: 2rem;
+  font-size: 2.4rem;
+}
 
- .guest h1{
-   text-align: center;
-   color: #f3f3f3;
-   margin-top:2rem;
-   font-size: 2.4rem;
- }
+.guest .guest-container > div p {
+  margin: 0 1rem;
+  color: #3d3c3f;
+  font-size: 0.9rem;
+}
 
- .guest .guest-container > div p{
-   margin: 0 1rem;
-   color: #3d3c3f;
- }
-
-  img{
-    width: 14%;
-    height: 100%;
-    border-radius: 50%;
-  }
-
-  
+img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
 
 footer {
   padding: 3rem;
@@ -344,7 +339,21 @@ footer {
     color: #f3f3f3;
     font-weight: bold;
   }
-  .about-container .box-2{
-      display: none;
-    }
+  .about-container .box-2 {
+    display: none;
+  }
+
+  .guest-container > div p {
+    line-height: 1.2rem;
+  }
+
+  img {
+    width: 20%;
+    height: 100%;
+    border-radius: 50%;
+  }
+
+  .guest .guest-container {
+    width: 100%;
+  }
 }
