--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,11 @@ body {
 .navbar ul li a {
   padding: 1.6rem 1rem;
   color: #f3f3f3;
+  transition: all 0.2s ease-in;
 }
 
 .navbar ul li a:hover {
-  background-color: #3d3c3f;
+  background: #3d3c3f;
   color: #f7b67f;
 }
 
@@ -82,6 +83,7 @@ body {
   font-size: 1.4rem;
   color: #f3f3f3;
   background-color: #3d3c3f;
+  transition: all 0.2s ease-in;
 }
 
 .showcase a:hover {
@@ -130,6 +132,7 @@ body {
   color: black;
   padding: 1rem;
   margin-bottom: 1rem;
+  transition: all 0.2s ease-in;
 }
 
 .hotel-history .box-2 a:hover {
@@ -261,7 +264,7 @@ body {
 .guest .guest-container {
   display: flex;
   flex-direction: column;
-  width: 60%;
+  max-width: 800px;
   margin: 4rem;
 }
 
